--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -7,21 +7,23 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Página sobre Aves</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Avifauna - Pássaros do Mundo</h1>
+        <nav>
+            <h1>Avifauna - Pássaros do Mundo</h1>
+            <ul>
+                <li><a href="#introducao">Introdução</a></li>
+                <li><a href="#tipos">Tipos de Aves</a></li>
+                <li><a href="#habitat">Habitat</a></li>
+                <li><a href="#curiosidades">Curiosidades</a></li>
+            </ul>
+        </nav>
     </header>
-    
-    <nav>
-        <ul>
-            <li><a href="#introducao">Introdução</a></li>
-            <li><a href="#tipos">Tipos de Aves</a></li>
-            <li><a href="#habitat">Habitat</a></li>
-            <li><a href="#curiosidades">Curiosidades</a></li>
-        </ul>
-    </nav>
 
     <section id="introducao">
         <h2>Introdução</h2>
@@ -48,4 +50,3 @@
     </footer>
 </body>
 </html>
-
