--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -1,3 +1,4 @@
+<body>
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -58,3 +59,4 @@
         <a href="#products">Products</a> |
         <a href="#about">About Us</a> |
         <a href="#contact">Contact</a
+</body>
